--- a/src/components/AppHeader/AppHeader.module.css
+++ b/src/components/AppHeader/AppHeader.module.css
@@ -1,10 +1,14 @@
 .header {
     width: 100%;
-    padding: 16px 0;
+    background: #1C1C21;
+    box-sizing: border-box;
 }
 
 .headerInner {
-    max-width: 1125px;
+    position: relative;
+    max-width: 1280px;
     margin: 0 auto;
-    background-color: black;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
