--- a/src/components/NavItem/NavItem.module.css
+++ b/src/components/NavItem/NavItem.module.css
@@ -1,7 +1,4 @@
 .item {
-    display: flex;
-    gap: 8px;
-    align-items: center;
     cursor: pointer;
 }
 
@@ -11,4 +8,12 @@
 
 .inactive {
     opacity: .6;
+}
+
+.link {
+    display: flex;
+    gap: 8px;
+    align-items: center;
+    text-decoration: none;
+    color: inherit;
 }
