--- a/src/components/BurgerConstructor/BurgerConstructor.module.css
+++ b/src/components/BurgerConstructor/BurgerConstructor.module.css
@@ -30,6 +30,10 @@
     justify-content: flex-end;
     align-items: center;
     gap: 10px;
+    min-height: 80px;
+}
+
+.menuItemsContainer {
 }
 
 .menuItemTop,
