--- a/src/components/IngredientDetails/IngredientDetails.module.css
+++ b/src/components/IngredientDetails/IngredientDetails.module.css
@@ -1,5 +1,9 @@
 .container {
     text-align: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
 .calories {
@@ -7,4 +11,11 @@
     justify-content: space-between;
     gap: 20px;
     padding-top: 32px;
+}
+
+.header {
+    height: 54px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
