buttons in Profile, layout

--- a/src/components/IngredientDetails/IngredientDetails.module.css
+++ b/src/components/IngredientDetails/IngredientDetails.module.css
@@ -2,8 +2,7 @@
     text-align: center;
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    align-items: center;
+    margin: auto;
 }
 
 .calories {
