--- a/src/components/Modal/Modal.module.css
+++ b/src/components/Modal/Modal.module.css
@@ -4,9 +4,10 @@
     left: 50%;
     transform: translate(-50%, -50%);
     width: 720px;
+    max-height: 720px;
     background: #1C1C21;
     border-radius: 40px;
-    z-index: 3;
+    z-index: 20;
     padding: 40px;
     box-sizing: border-box;
 }
