--- a/src/pages/Profile/Profile.module.css
+++ b/src/pages/Profile/Profile.module.css
@@ -2,9 +2,7 @@
     display: flex;
     justify-content: flex-start;
     gap: 60px;
-    position: absolute;
-    top: 50%;
-    transform: translateY(-50%);
+    width: 100%;
 }
 
 .sideMenu {
@@ -12,6 +10,7 @@
     display: flex;
     flex-direction: column;
     gap: 80px;
+    margin-top: 120px;
 }
 
 .nav a,
