orders feed done

--- a/src/pages/Feed/Feed.module.css
+++ b/src/pages/Feed/Feed.module.css
@@ -40,10 +40,9 @@ title {
 .ordersDone,
 .ordersInProgress {
     display: grid;
-    grid-template-columns: 1fr 1fr;
+    grid-template-rows: repeat(5, 1fr);
     grid-auto-flow: column;
     grid-column-gap: 20px;
-    height: 135px;
 }
 
 .ordersDone {
