--- a/src/components/OrderItem/OrderItem.module.css
+++ b/src/components/OrderItem/OrderItem.module.css
@@ -32,6 +32,20 @@
     width: 64px;
     height: 64px;
     margin-left: -20px;
+    background-color: #1C1C21;
+    padding: 2px;
+    position: relative;
+}
+
+.ingImage img {
+    height: 64px;
+}
+
+.ingImage span {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
 
 .burgerIngredients {
