--- a/src/components/OrdersFeed/OrdersFeed.module.css
+++ b/src/components/OrdersFeed/OrdersFeed.module.css
@@ -1,5 +1,6 @@
 .orders {
-    height: calc(100vh - 220px);
+    /* height: calc(100vh - 260px); */
+    height: 100%;
     overflow-y: scroll;
     display: flex;
     flex-direction: column;
