main page ux rework

--- a/src/components/BurgerConstructor/BurgerConstructor.module.css
+++ b/src/components/BurgerConstructor/BurgerConstructor.module.css
@@ -34,6 +34,12 @@
 }
 
 .menuItemsContainer {
+    border-radius: 10%;
+}
+
+.menuItemsContainer > span {
+    display: flex;
+    justify-content: center;
 }
 
 .menuItemTop,
